--- a/home/styles.css
+++ b/home/styles.css
@@ -1,9 +1,7 @@
-html, body {
-    height: 100%;
-    width: 100%;
-  }
+
   body{
-      overflow-y: hidden;
+    overflow-y: hidden;
+    overflow-x: scroll;
     min-width: 1000px;
   }
   .center-align{
@@ -26,11 +24,11 @@ html, body {
     user-select: none;
 }
 #time{
-    font-size: 600%;
-    margin: 0;
-    border: 10px solid  #1d1b31;
-    border-radius: 20px;
-    box-shadow: 10px 10px 25px #525252;
+  font-size: 600%;
+  margin: 0;
+  border: 10px solid #1d1b31;
+  border-radius: 20px;
+  box-shadow: 0 0 15px #1d1b31;
 }
 #date{
     font-size: 200%;
@@ -63,7 +61,7 @@ html, body {
       width: 450px;
       border-radius: 30px;
       color: white;
-      box-shadow: -5px -5px 5px #525252,
+            box-shadow: -5px -5px 5px #525252,
                     5px 5px 5px  #525252;;
   
     
@@ -87,12 +85,12 @@ html, body {
       position: fixed;
       right: 10px;
       top: 10px;
-        bottom: 10px;
+      bottom: 10px;
       transition: 0.5s;
   }
   #todo-list-entries {
       
-      max-height: 50%;
+      max-height: 60%;
       overflow-y: scroll ;
       
   }
@@ -110,8 +108,8 @@ html, body {
   position: absolute;
   text-transform: uppercase;
   color:black;
-  top: 30px;
-  left: 1100px;
+  right: 10px;
+  top: 10px;
   font-weight: 700;
   padding: .6em .7em;
   border: white;
@@ -414,6 +412,9 @@ html,body{
 .buttons{
   display: block;
   text-align: center;
+}
+.buttons a{
+  text-decoration: none;
 }
 .homebutton{
 /*   position:absolute; */
